add notebook with experiments for various epsilons

--- a/Notebooks/Experiment 4 -- Laplace Mechanism.ipynb
+++ b/Notebooks/Experiment 4 -- Laplace Mechanism.ipynb
@@ -16,8 +16,9 @@
     "import numpy as np\n",
     "from scipy.stats import binom\n",
     "\n",
-    "from experiment_framework.helpers import AllAsymptotics, \\\n",
-    "load_completed_AAs_into_dataframe, load_completed_CCCs_into_dataframe\n",
+    "from experiment_framework.helpers import (AllAsymptotics,\n",
+    "load_completed_AAs_into_dataframe, load_completed_CCCs_into_dataframe,\n",
+    "AllDeltas)\n",
     "from empirical_privacy import laplace_mechanism, config\n",
     "from experiment_framework.asymptotic_analysis import compute_bootstrapped_upper_bound\n",
     "\n",
@@ -26,29 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Expected SD=0.105 P(correct)=0.553\n",
-      "1 Expected SD=0.221 P(correct)=0.611\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epsilons = [\n",
-    "    #0.01,\n",
+    "    0.01,\n",
     "    0.1,\n",
-    "    0.2,\n",
-    "    #1\n",
+    "    1.,\n",
     "]\n",
     "dses = [{\n",
-    "    'dimension': 3,\n",
-    "    'epsilon': eps,\n",
-    "    'delta': 0\n",
+    "        'database_0' : (0, 0, 0),\n",
+    "        'database_1' : (1, 0, 0),\n",
+    "        'sensitivity': 1.,\n",
+    "        'epsilon'    : eps,\n",
+    "        'delta'      : 0.\n",
     "} for eps in epsilons]\n",
     "\n",
     "asys = {\n",
@@ -58,138 +51,56 @@
     "    'fitter'             : 'knn',\n",
     "    # we use random tie-breaking since the samples are discrete\n",
     "    'fitter_kwargs'      : {'neighbor_method': 'gyorfi'},\n",
-    "    'n_docs'                : 50,\n",
-    "    'n_trials_per_training_set_size': 30,\n",
+    "    'n_docs'                : 30,\n",
+    "    'n_trials_per_training_set_size': 20,\n",
     "    'n_max'              : 2**14,\n",
-    "    'validation_set_size': 2**11,\n",
+    "    'validation_set_size': 2**12,\n",
     "    'p'                  : 0.9,  # for bootstrap\n",
     "    't'                  : 0.01  # for bootstrap\n",
-    "}\n",
-    "\n",
-    "def sd(eps, delta):\n",
-    "    return exp(eps)-1+delta\n",
-    "\n",
-    "def pc(eps, delta):\n",
-    "    return 0.5 + 0.5*sd(eps, delta)\n",
-    "\n",
-    "for (i, ds) in enumerate(dses):\n",
-    "    eps = ds[\"epsilon\"]\n",
-    "    delta = ds[\"delta\"]\n",
-    "    print(f'{i} Expected SD={sd(eps, delta):.3f} P(correct)={pc(eps, delta):.3f}')"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n",
-      "/opt/conda/lib/python3.6/site-packages/luigi/parameter.py:261: UserWarning: Parameter \"random_seed\" with value \"0\" is not of type string.\n",
-      "  warnings.warn('Parameter \"{}\" with value \"{}\" is not of type string.'.format(param_name, param_value))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CCCs = dict()\n",
     "Alls = dict()\n",
+    "AAs = dict()\n",
+    "CLBDs = dict()\n",
+    "\n",
     "for (i, ds) in enumerate(dses):\n",
     "    eps = epsilons[i]\n",
-    "    All = AllAsymptotics(\n",
+    "    All = AllDeltas(\n",
     "            gen_sample_path='empirical_privacy.laplace_mechanism.GenSampleLaplaceMechanism',\n",
     "            dataset_settings=ds,\n",
-    "            asymptotic_settings=asys)\n",
+    "            asymptotic_settings=asys,\n",
+    "            claimed_epsilon=0.5*eps\n",
+    "    )\n",
     "    Alls[eps] = All\n",
-    "#     for AA in All.requires():\n",
-    "#         AA.delete_outputs()\n",
-    "#         AA.delete_deps()\n",
-    "    CCCs[eps] = [AA.requires()['CCC'] for AA in All.requires()]\n",
+    "    CLBDs[eps] = All.requires()\n",
+    "    AAs[eps] = [CLBD.requires()['asymptotic_accuracy'] for CLBD in CLBDs[eps]]\n",
+    "    CCCs[eps] = [AA.requires()['CCC'] for AA in AAs[eps]]\n",
     "    "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### To build this requires the scheduler server running\n",
+    "1. Open a terminal in the docker container.\n",
+    "  * Click on the Jupyter logo in the top-left, then click New>Terminal.\n",
+    "2. Run the scheduler.\n",
+    "  * `luigid`\n",
+    "3. Execute the build in the cell below, and observe progress in the scheduler's UI at port 8082."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,14 +109,14 @@
        "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CCC_jobs = list(itertools.chain(*[[AA.requires()['CCC'] for AA in All.requires()] for All in Alls.values()]))\n",
-    "luigi.build(CCC_jobs, workers=48, log_level='ERROR')  # compute CCCs using 16 workers since they're single threaded\n",
+    "CCC_jobs = list(itertools.chain(*[[CLBD.requires()['asymptotic_accuracy'].requires()['CCC'] for CLBD in All.requires()] for All in Alls.values()]))\n",
+    "luigi.build(CCC_jobs, workers=15, log_level='ERROR')  # compute CCCs using 16 workers since they're single threaded\n",
     "luigi.build([All for All in Alls.values()], workers=2, log_level='ERROR')  # do bootstrap using 2 workers since each bootstrap is parallelized"
    ]
   },
@@ -218,18 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "import pandas as pd\n",
     "\n",
     "from scipy.optimize import least_squares\n",
     "\n",
-    "\n",
-    "from experiment_framework.asymptotic_analysis import hoeffding_n_given_t_and_p, bootstrap_ci,\\\n",
+    "from experiment_framework.asymptotic_analysis import hoeffding_n_given_t_and_p_two_sided, bootstrap_ci,\\\n",
     "    asymptotic_privacy_lr, transform_n_to_k_for_knn, asymptotic_curve\n",
     "from experiment_framework.privacy_estimator_mixins import get_k"
    ]
@@ -238,7 +146,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot for a particular epsilon"
+    "### With correct delta:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01\n",
+      "eps=0.01 n_succ=30 n_tot=30\n",
+      "0.1\n",
+      "eps=0.1 n_succ=30 n_tot=30\n",
+      "1.0\n",
+      "eps=1.0 n_succ=0 n_tot=30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for eps in epsilons:\n",
+    "    n_succ = 0\n",
+    "    n_tot = 0\n",
+    "    print(eps)\n",
+    "    for clbd in CLBDs[eps]:\n",
+    "        \n",
+    "        with clbd.output().open() as f:\n",
+    "            delta = dill.load(f)\n",
+    "#             print(f'\\t{delta}')\n",
+    "            n_tot+=1\n",
+    "            n_succ += delta['lower_bound'] <= 0 and delta['upper_bound'] >= 0\n",
+    "    print(f'eps={eps} n_succ={n_succ} n_tot={n_tot}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### claimed epsilon too low"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01\n",
+      "eps=0.01 n_succ=0 n_tot=30\n",
+      "0.1\n",
+      "eps=0.1 n_succ=0 n_tot=30\n",
+      "1.0\n",
+      "eps=1.0 n_succ=30 n_tot=30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for eps in epsilons:\n",
+    "    n_succ = 0\n",
+    "    n_tot = 0\n",
+    "    print(eps)\n",
+    "    for clbd in CLBDs[eps]:\n",
+    "        \n",
+    "        with clbd.output().open() as f:\n",
+    "            delta = dill.load(f)\n",
+    "#             print(f'\\tmean={(delta[\"upper_bound\"]+delta[\"lower_bound\"])/2} {delta}')\n",
+    "            n_tot+=1\n",
+    "            n_succ += delta['lower_bound'] > 0\n",
+    "    print(f'eps={eps} n_succ={n_succ} n_tot={n_tot}')"
    ]
   },
   {
